fix shutdown flow

--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -614,56 +614,11 @@ Resources:
           # --------------------------------------------------------------------
           # Metadata
           # --------------------------------------------------------------------
-          # Deploy version: ${BatchDeployVersion}
           export BATCH_DEPLOY_VERSION="${BatchDeployVersion}"
           echo "Batch Deploy Version: $BATCH_DEPLOY_VERSION"
 
           # --------------------------------------------------------------------
-          # 0) GPU bootstrap (g4dn): install NVIDIA driver ONCE + reboot
-          #    - Required so torch can see CUDA and your code switches to "cuda"
-          # --------------------------------------------------------------------
-          NVIDIA_MARKER="/var/lib/motiv8/nvidia-driver-installed"
-          mkdir -p /var/lib/motiv8
-
-          if ! command -v nvidia-smi >/dev/null 2>&1; then
-            echo "nvidia-smi not found; likely no NVIDIA driver installed yet."
-          fi
-
-          if [ ! -f "$NVIDIA_MARKER" ]; then
-            echo "Installing NVIDIA driver (one-time) and rebooting..."
-
-            yum update -y
-
-            # Helpful tools
-            yum install -y awscli aws-cfn-bootstrap git
-
-            # Kernel headers/devel for the running kernel (required for driver module build/install)
-            yum install -y "kernel-devel-$(uname -r)" "kernel-headers-$(uname -r)" || true
-
-            # On Amazon Linux 2, NVIDIA driver is available via yum in many environments.
-            # If your base AMI doesn't have it, consider switching to an AWS Deep Learning AMI.
-            yum install -y nvidia-driver || {
-              echo "ERROR: Failed to install nvidia-driver via yum."
-              echo "Recommendation: use AWS Deep Learning AMI (Ubuntu/AL2) for g4dn, or ensure your AMI repo includes nvidia-driver."
-              exit 1
-            }
-
-            # Enable persistence daemon (optional but nice)
-            systemctl enable nvidia-persistenced || true
-            systemctl start nvidia-persistenced || true
-
-            # Mark installed so we don't loop forever
-            date -u > "$NVIDIA_MARKER"
-
-            echo "Rebooting now so NVIDIA kernel module loads..."
-            reboot
-            exit 0
-          fi
-
-          echo "NVIDIA marker present; proceeding without reinstall."
-
-          # --------------------------------------------------------------------
-          # Base packages
+          # Base packages (needed for everything below)
           # --------------------------------------------------------------------
           yum update -y
           yum install -y \
@@ -680,12 +635,64 @@ Resources:
           yum install -y mesa-libGL glib2 libSM libXrender libXext
 
           # --------------------------------------------------------------------
-          # GPU sanity check (logs only)
+          # 0) One-time GPU bootstrap via systemd (prevents cloud-init reboot loops)
+          #    - Installs NVIDIA driver on g4dn
+          #    - Reboots once
+          #    - Marks /var/lib/motiv8/nvidia-ready so it never runs again
           # --------------------------------------------------------------------
-          nvidia-smi || true
+          mkdir -p /var/lib/motiv8
+          GPU_READY_MARKER="/var/lib/motiv8/nvidia-ready"
+
+          cat > /etc/systemd/system/motiv8-gpu-bootstrap.service <<'EOF'
+          [Unit]
+          Description=One-time NVIDIA driver bootstrap for g4dn
+          After=network-online.target
+          Wants=network-online.target
+          ConditionPathExists=!/var/lib/motiv8/nvidia-ready
+
+          [Service]
+          Type=oneshot
+          ExecStart=/bin/bash -lc '
+            set -euo pipefail
+            echo "[gpu-bootstrap] starting..."
+
+            # If driver already present & working, just mark ready.
+            if command -v nvidia-smi >/dev/null 2>&1 && nvidia-smi >/dev/null 2>&1; then
+              echo "[gpu-bootstrap] nvidia-smi already works; marking ready."
+              date -u > /var/lib/motiv8/nvidia-ready
+              exit 0
+            fi
+
+            echo "[gpu-bootstrap] installing NVIDIA driver..."
+            yum update -y
+
+            # Kernel headers/devel for current kernel
+            yum install -y "kernel-devel-$(uname -r)" "kernel-headers-$(uname -r)" || true
+
+            # Install driver (requires AMI repos that include nvidia-driver)
+            yum install -y nvidia-driver
+
+            systemctl enable nvidia-persistenced || true
+            systemctl start nvidia-persistenced || true
+
+            echo "[gpu-bootstrap] installed; marking ready and rebooting..."
+            date -u > /var/lib/motiv8/nvidia-ready
+
+            /sbin/shutdown -r now
+          '
+          RemainAfterExit=yes
+
+          [Install]
+          WantedBy=multi-user.target
+          EOF
+
+          systemctl daemon-reload
+          systemctl enable motiv8-gpu-bootstrap.service
+          systemctl start motiv8-gpu-bootstrap.service
 
           # --------------------------------------------------------------------
-          # 1) ONE-TIME provisioning at first boot: code + venv in /opt/motiv8-be
+          # 1) ONE-TIME provisioning: code + venv in /opt/motiv8-be
+          #    NOTE: this runs even on first boot, but batch won't execute until GPU is ready.
           # --------------------------------------------------------------------
           mkdir -p /opt
 
@@ -702,23 +709,16 @@ Resources:
 
           python3 -m venv venv
           source venv/bin/activate
-
           pip install --upgrade pip wheel
 
           # --------------------------------------------------------------------
           # 1a) Install CUDA-enabled PyTorch FIRST (critical)
-          #     This ensures torch is GPU-capable on g4dn.
-          #
-          # Notes:
-          # - Prefer cu118 wheels; T4 works well with this.
-          # - We install it BEFORE requirements.txt so downstream deps resolve cleanly.
-          # - If requirements.txt includes torch, it may overwrite this; so we force-reinstall after.
+          #     (requirements.txt should NOT include torch)
           # --------------------------------------------------------------------
           pip install --upgrade --force-reinstall \
             torch torchvision torchaudio \
             --index-url https://download.pytorch.org/whl/cu118
 
-          # Install your normal deps
           pip install -r requirements.txt
 
           # Ensure torch is still CUDA-enabled even if requirements.txt tried to replace it
@@ -726,8 +726,8 @@ Resources:
             torch torchvision torchaudio \
             --index-url https://download.pytorch.org/whl/cu118
 
-          # Quick python-level sanity check
-          python - <<'PY'
+          # Optional sanity output (won't fail boot)
+          python - <<'PY' || true
           import torch
           print("torch:", torch.__version__)
           print("cuda available:", torch.cuda.is_available())
@@ -735,20 +735,18 @@ Resources:
               print("gpu:", torch.cuda.get_device_name(0))
           PY
 
-          # Ensure the script in the artifact is executable
           chmod +x /opt/motiv8-be/run-batch-job.sh
 
           # --------------------------------------------------------------------
-          # 2) SINGLE systemd oneshot service
-          #    - does boot prep every time
-          #    - runs batch job
-          #    - no dependency cycles
+          # 2) SINGLE systemd oneshot service (waits for GPU readiness marker)
           # --------------------------------------------------------------------
           cat > /etc/systemd/system/motiv8-batch.service << 'SVCEOF'
           [Unit]
           Description=motiv8me Batch Job
-          After=network-online.target cloud-final.service
+          After=network-online.target cloud-final.service motiv8-gpu-bootstrap.service
           Wants=network-online.target cloud-final.service
+          Requires=motiv8-gpu-bootstrap.service
+          ConditionPathExists=/var/lib/motiv8/nvidia-ready
 
           [Service]
           Type=oneshot
@@ -758,7 +756,6 @@ Resources:
           Environment="UPLOADS_BUCKET=${UploadsBucket}"
           Environment="BATCH_DEPLOY_VERSION=${BatchDeployVersion}"
 
-          # --- ensure runner is always correct ---
           ExecStartPre=/bin/bash -lc '\
             set -euo pipefail; \
             mkdir -p /app/batch; \
@@ -771,10 +768,8 @@ Resources:
             ls -la /app/batch/run-batch.sh \
           '
 
-          # --- run batch ---
           ExecStart=/bin/bash -lc '/app/batch/run-batch.sh'
 
-          # --- logging + long-running safety ---
           StandardOutput=journal+console
           StandardError=journal+console
           TimeoutStartSec=0
@@ -785,7 +780,8 @@ Resources:
           SVCEOF
 
           # --------------------------------------------------------------------
-          # 3) Enable and run batch job on this boot
+          # 3) Enable and run batch job
+          #    - If first boot triggers reboot, batch will run on the next boot.
           # --------------------------------------------------------------------
           systemctl daemon-reload
           systemctl enable motiv8-batch.service
@@ -793,13 +789,13 @@ Resources:
 
           # --------------------------------------------------------------------
           # 4) CloudFormation signal
+          #    - Signal success after services are installed/enabled.
           # --------------------------------------------------------------------
           /opt/aws/bin/cfn-signal \
             -e $? \
             --stack ${AWS::StackName} \
             --resource BatchInstance2 \
             --region ${AWS::Region}
-
 
 
   # ==========================================================
